CORE-6706: Lines no longer break in the middle of words generally
(except in the extreme case where a word is so long that it will not
fit on its own line, and would otherwise provoke a horizontal overflow).

--- a/app/styles/dataCards/feature-map-flannel.sass
+++ b/app/styles/dataCards/feature-map-flannel.sass
@@ -121,7 +121,10 @@ $sticky-border-height: 10px
     .name,
     .value
       display: inline-block
-      word-break: break-all
+      // Only break word if it is too long
+      // to fit on one entire line.
+      // Otherwise do not break lines in the middle
+      // of words.
       word-wrap: break-word
 
     .name
